# jukebotx-service-full

./: .dockerignore  .env.development.example  .env.example  .env.production.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.tunnel.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
apps/activity/: .env.example  .env.production.example  .gitignore  Dockerfile  README.md  astro.config.mjs  package-lock.json  package.json
apps/activity/src/lib/: api.ts
apps/activity/src/pages/: index.astro
apps/activity/src/scripts/: activity.ts
apps/api/: Dockerfile  README.md
apps/api/jukebotx_api/: auth.py  broadcaster.py  main.py  opus_cache.py  schemas.py  settings.py
apps/api/jukebotx_api/static/: styles.css
apps/api/jukebotx_api/templates/: index.html
apps/bot/: Dockerfile  README.md
apps/bot/jukebotx_bot/: internal_api.py  main.py  settings.py
apps/bot/jukebotx_bot/discord/: audio.py  now_playing.py  session.py  suno.py
apps/bot/jukebotx_bot/discord/checks/: permissions.py
apps/worker/: Dockerfile
apps/worker/jukebotx_worker/: main.py  settings.py  transcode.py
scripts/: smoke_audio_urls.py  smoke_find_lyrics_marker.py  smoke_ingest.py  smoke_playlist_client.py  smoke_suno_client.py
tests/: test_audio_controller.py  test_suno_client_meta.py  test_suno_ingest.py
